--- a/es/spanish-b1.html
+++ b/es/spanish-b1.html
@@ -52,11 +52,9 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
+              <div class="responsive">
           <p><h1>Español</h1></p>
 
-
-
-        <article class="img-info">
 
           <div class="menu">
               <ul>
@@ -76,68 +74,64 @@
 
           <h2>Nivel B1</h2>
       <p>
-        We are getting closer to the typical "medium level" that is boasted in many curricula without being accredited by any institution.
-
-       At this level the speaker must be able to engage in conversation with native speakers in everyday life situations (work, school, a restaurant).
-
-       Abstract vocabulary begins to be mastered and the speaker can describe his experiences or events that have happened to him in the past. He can talk about dreams, ambitions, and hopes for the future. He is able to express his opinion about plans and give explanations about his actions.
+Nos estamos acercando al típico "nivel medio" del que se presume en muchos planes de estudio sin estar acreditado por ninguna institución. En este nivel, el hablante debe poder entablar una conversación con hablantes nativos en situaciones de la vida cotidiana (trabajo, escuela, restaurante). Se empieza a dominar el vocabulario abstracto y el hablante puede describir sus experiencias o hechos que le han sucedido en el pasado. Puede hablar de sueños, ambiciones y esperanzas para el futuro. Es capaz de expresar su opinión sobre los planes y dar explicaciones sobre sus acciones.
      </p>
-      <h2>Past Indicative Mode</h2>
-      <button onclick="toggleContent22()">Exercises 1: Imperfect or Indefinite?</button>
+      <h2>Modo Indicativo Pasado</h2>
+      <button onclick="toggleContent22()">Ejercicios 1: ¿Imperfecto o Indefinido?</button>
       <div id="content22" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://learningapps.org/watch?app=9373009" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
       </div>
-      <button onclick="toggleContent23()">Exercises 2: Imperfect or Indefinite?</button>
+      <button onclick="toggleContent23()">Ejercicios 2: ¿Imperfecto o Indefinido?</button>
           <div id="content23" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://learningapps.org/watch?app=4824509" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
        </div>
 
-      <button onclick="toggleContent24()">Exercises 3: Imperfect or Indefinite?</button>
+      <button onclick="toggleContent24()">Ejercicios 3: ¿Imperfecto o Indefinido?</button>
               <div id="content24" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://learningapps.org/watch?app=5503853" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
               </div>
 
-      <button onclick="toggleContent25()">Exercises 4: Imperfect or Indefinite?</button>
+      <button onclick="toggleContent25()">Ejercicios 3: ¿Imperfecto o Indefinido?</button>
                   <div id="content25" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?app=9373630" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                        </div>
 
-     <button onclick="toggleContent53()">Past Indefinite Verbos Irreg.</button>
+     <button onclick="toggleContent53()">Pasado Indefinido Verbos Irreg.</button>
                  <div id="content53" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?v=p15xcysdn21" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                       </div>
-    <button onclick="toggleContent54()">Contrast of pasts</button>
+    <button onclick="toggleContent54()">Contraste de pasados</button>
                 <div id="content54" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?v=prmp3vi8321" style="border:0px;width:100%;height:700px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                      </div>
-   <button onclick="toggleContent57()">Subjuntive 1</button>
+   <button onclick="toggleContent57()">Subjuntivo 1</button>
                <div id="content57" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                       <iframe src="https://learningapps.org/watch?app=26338883" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                     </div><br>
 
       <h2>Subjuntivo</h2>
-          <button onclick="toggleContent2()">Exercises 1: Presente (Subjuntivo)</button>
+          <button onclick="toggleContent2()">Ejercicios 1: Presente (Subjuntivo)</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjyBeOloKi6KEQOwbf1mHMHoMM3MKKGP9Ce2N-9APftX7-BA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <p><button onclick="toggleContent3()">Exercises 2: Past Perfect (Subjuntivo)</button>
+      <p><button onclick="toggleContent3()">Ejercicios 2: Pretérito Perfecto (Subjuntivo)</button>
       <div id="content3" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXPGQMhfO49gtgzG1k_K2mHASXGkBpIwN7Ot-L6FDh4LARbw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <p><button onclick="toggleContent4()">Exercises 3: Pluperfect (Subjuntivo)</button>
+      <p><button onclick="toggleContent4()">Ejercicios 3: Pluscuamperfecto (Subjuntivo)</button>
           <div id="content4" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfe2pGNII7r9SghqIryRkuUGYKO04ca-wiWN8twfcclil5OVQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
 
       </div>
 
-     <p><button onclick="toggleContent5()">Exercises 4: Subjuntivo or Indicative? (1)</button>
+     <p><button onclick="toggleContent5()">Ejercicios 4: Subjuntivo o Indicativo? (1)</button>
       <div id="content5" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjoBSZ8Agf4YDu121N5GMDoBNw9t8WV4XUH3aShgl8v8FDXw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
 
-      <p><button onclick="toggleContent6()">Exercises 5: Subjuntivo or Indicative? (2)</button>
+      <p><button onclick="toggleContent6()">Ejercicios 5: Subjuntivo or Indicativo? (2)</button>
       <div id="content6" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqYrakNq_ag5UaitM5qoPUC3fpyxts2HWZzR0kVJLpQJu0tg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
@@ -151,15 +145,11 @@
       <p><button onclick="toggleContent34()">Test Final B1.2</button>
               <div id="content34" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
+                </div>
+                  </div>
+                        </article>
+                        <script type="text/javascript" src="js/main.js"></script>
 
-
-      </div>
-
-</div></p>
-
-
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
-
-    </body>
-</html>
+                  </div>
+                    </body>
+                </html>
