--- a/pl/spanish-a2.html
+++ b/pl/spanish-a2.html
@@ -52,11 +52,9 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
+              <div class="responsive">
           <p><h1>Hiszpański</h1></p>
 
-
-
-        <article class="img-info">
 
           <div class="menu">
               <ul>
@@ -75,10 +73,11 @@
           </div>
 
           <h2>Poziom A2</h2>
+
       <p>
         Na tym poziomie struktury gramatyczne i umiejętności komunikacyjne z poprzedniego poziomu są nieco bardziej rozwinięte.
 
-         Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji. </div>
+         Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji.
       </p>
             <h2>Minitests</h2>
       <button onclick="toggleContent42()">Minitesty 1</button>
@@ -156,10 +155,12 @@
   <button onclick="toggleContent56()">Verbs in PPS</button>
                              <div id="content56" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                              <iframe src="https://learningapps.org/watch?v=pq432cnrc22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                             </div>
+                           </div>
+                           </div><!-- responsive-->
+                         </div><!-- main-content-->
+                                   </article>
+                                   <script type="text/javascript" src="js/main.js"></script>
 
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
-
-    </body>
-</html>
+                             </div><!-- wrapper-->
+                               </body>
+                           </html>
