--- a/spanish.html
+++ b/spanish.html
@@ -57,7 +57,7 @@
 
           <div class="menu">
               <ul>
-                <li><a href="#" class="active" onclick="toggleContent1()">Niveles</a>
+                <li><a href="#" class="active" onclick="toggleContent1()">Levels</a>
                   <div id="content1" style="display:none;">
                       <ul class="menu-niveles">
                         <li><a href="spanish-a1.html">A1</a></li>
@@ -71,9 +71,9 @@
               </ul>
           </div>
 
-          <h2>Descripción</h2>
-          <p>El objetivo de este sitio es facilitar a los estudiantes el acceso a una serie de ejercicios linguísticos diseñados especialmente para cada nivel de Español.</p>
-</div>
+          <h2>Description</h2>
+                <p>The objective of this site is to provide students with access to a series of linguistic exercises specially designed for each level of Spanish.</p>
+          </div>
         </article>
         <script type="text/javascript" src="js/main.js"></script>
   </div>
