--- a/pl/spanish-a1.html
+++ b/pl/spanish-a1.html
@@ -49,7 +49,6 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-              <div class="responsive">
           <p><h1>Hiszpański</h1></p>
 
 
@@ -82,6 +81,7 @@ Jest to najbardziej podstawowy poziom opanowania języka. Na tym poziomie oczeku
 
                 </p>
           <h2>Minitesty </h2>
+<div class="reponsive">
           <button onclick="toggleContent2()">Minitest 1</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Ładuję…</iframe>
@@ -203,11 +203,11 @@ Jest to najbardziej podstawowy poziom opanowania języka. Na tym poziomie oczeku
 
                           <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
-</div><!-- responsive-->
-</div><!-- main-content-->
+</div>
+  </div>
         </article>
         <script type="text/javascript" src="js/main.js"></script>
 
-  </div><!-- wrapper-->
+  </div>
     </body>
 </html>
