--- a/spanish-a1.html
+++ b/spanish-a1.html
@@ -49,9 +49,9 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-            <div class="responsive">
-
           <p><h1>Spanish</h1></p>
+
+
 
 
 
@@ -201,11 +201,13 @@
                            </div>
 
                           <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
-                        </div>
-                          </div>
-                                </article>
-                                <script type="text/javascript" src="js/main.js"></script>
 
-                          </div>
-                            </body>
-                        </html>
+                          <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+  </div>
+        </article>
+        <script type="text/javascript" src="js/main.js"></script>
+
+  </div>
+    </body>
+</html>
