--- a/spanish-a2.html
+++ b/spanish-a2.html
@@ -55,6 +55,9 @@
           <p><h1>Spanish</h1></p>
 
 
+
+        <article class="img-info">
+
           <div class="menu">
               <ul>
                 <li><a href="#" class="active" onclick="toggleContent1()">Levels</a>
@@ -72,11 +75,10 @@
           </div>
 
           <h2>Nivel A2</h2>
-<div class="responsive">
       <p>
         At this level, the grammatical structures and communication skills of the previous level are developed a little more.
 
-        The speaker is expected to be able to describe in the present and in the past simple aspects of their immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information. 
+        FThe speaker is expected to be able to describe in the present and in the past simple aspects of their immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information. </div>
       </p>
             <h2>Mini Tests</h2>
       <button onclick="toggleContent42()">Mini-Test 1</button>
@@ -154,11 +156,10 @@
   <button onclick="toggleContent56()">Verbs in PPS</button>
                              <div id="content56" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                              <iframe src="https://learningapps.org/watch?v=pq432cnrc22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
-                           </div>
                              </div>
-                                   </article>
-                                   <script type="text/javascript" src="js/main.js"></script>
 
-                             </div>
-                               </body>
-                           </html>
+        </article>
+        <script type="text/javascript" src="js/main.js"></script>
+
+    </body>
+</html>
