--- a/spanish-b1.html
+++ b/spanish-b1.html
@@ -52,9 +52,11 @@
                 </ul>
                 <article class="img-info">
             <div id="main-content">
-              <div class="responsive">
           <p><h1>Spanish</h1></p>
 
+
+
+        <article class="img-info">
 
           <div class="menu">
               <ul>
@@ -72,7 +74,7 @@
               </ul>
           </div>
 
-          <h2>Level B1</h2>
+          <h2>Nivel B1</h2>
       <p>
         We are getting closer to the typical "medium level" that is boasted in many curricula without being accredited by any institution.
 
@@ -119,41 +121,45 @@
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjyBeOloKi6KEQOwbf1mHMHoMM3MKKGP9Ce2N-9APftX7-BA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <br><button onclick="toggleContent3()">Exercises 2: Past Perfect (Subjunctive)</button>
+      <p><button onclick="toggleContent3()">Exercises 2: Past Perfect (Subjunctive)</button>
       <div id="content3" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfXPGQMhfO49gtgzG1k_K2mHASXGkBpIwN7Ot-L6FDh4LARbw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
        </div>
 
-      <br><button onclick="toggleContent4()">Exercises 3: Pluperfect (Subjunctive)</button>
+      <p><button onclick="toggleContent4()">Exercises 3: Pluperfect (Subjunctive)</button>
           <div id="content4" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
               <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfe2pGNII7r9SghqIryRkuUGYKO04ca-wiWN8twfcclil5OVQ/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
 
       </div>
 
-     <br><button onclick="toggleContent5()">Exercises 4: Subjunctive or Indicative? (1)</button>
+     <p><button onclick="toggleContent5()">Exercises 4: Subjunctive or Indicative? (1)</button>
       <div id="content5" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdjoBSZ8Agf4YDu121N5GMDoBNw9t8WV4XUH3aShgl8v8FDXw/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
 
-      <br><button onclick="toggleContent6()">Exercises 5: Subjunctive or Indicative? (2)</button>
+      <p><button onclick="toggleContent6()">Exercises 5: Subjunctive or Indicative? (2)</button>
       <div id="content6" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqYrakNq_ag5UaitM5qoPUC3fpyxts2HWZzR0kVJLpQJu0tg/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
       </div>
 
       <h2>Tests</h2>
-      <button onclick="toggleContent55()">Mini-Test B1.1</button>
+      <p><button onclick="toggleContent55()">Mini-Test B1.1</button>
               <div id="content55" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeb3Bwp4fv_QzsSy9B1Tuij1qnu0QWhD3l4iTxaCVT5QR0C6g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
       </div>
 
-      <br><button onclick="toggleContent34()">Final Test B1.2</button>
+      <p><button onclick="toggleContent34()">Final Test B1.2</button>
               <div id="content34" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
-                </div>
-                  </div>
-                        </article>
-                        <script type="text/javascript" src="js/main.js"></script>
 
-                  </div>
-                    </body>
-                </html>
+
+      </div>
+
+</div></p>
+
+
+        </article>
+        <script type="text/javascript" src="js/main.js"></script>
+
+    </body>
+</html>
