--- a/spanish-b2.html
+++ b/spanish-b2.html
@@ -55,6 +55,9 @@
           <p><h1>Spanish</h1></p>
 
 
+
+        <article class="img-info">
+
           <div class="menu">
               <ul>
                 <li><a href="#" class="active" onclick="toggleContent1()">Levels</a>
