--- a/es/spanish-a1.html
+++ b/es/spanish-a1.html
@@ -200,13 +200,14 @@ Se trata del nivel más básico de dominio de una lengua. En este nivel se esper
                              <iframe src="https://quizlet.com/581406313/match/embed?i=2nc5sb&x=1jj1" style="border:0px;width:100%;height:700px" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                            </div>
 
-                          <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
+                           <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
-</div>
-  </div>
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
+                           <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-  </div>
-    </body>
-</html>
+   </div>
+         </article>
+         <script type="text/javascript" src="js/main.js"></script>
+
+   </div>
+     </body>
+ </html>
