--- a/es/spanish-a2.html
+++ b/es/spanish-a2.html
@@ -158,8 +158,14 @@
                              <iframe src="https://learningapps.org/watch?v=pq432cnrc22" style="border:0px;width:100%;height:500px" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
                              </div>
 
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
+                             <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
-    </body>
-</html>
+                             <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+
+     </div>
+           </article>
+           <script type="text/javascript" src="js/main.js"></script>
+
+     </div>
+       </body>
+   </html>
