--- a/es/spanish-b1.html
+++ b/es/spanish-b1.html
@@ -154,13 +154,13 @@
                   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf3qWVbEBtC3l0vTqoMBksolw58ihzvJjcY0zWyAV1w45Xv2g/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Loading…</iframe>
                 </div>
 
+                <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
+                <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-</div>
 </div>
 </article>
 <script type="text/javascript" src="js/main.js"></script>
-
 
 </div>
 </body>
