--- a/es/spanish-c1.html
+++ b/es/spanish-c1.html
@@ -87,13 +87,14 @@
 
           </div>
       </div>
-<p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+      <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
+      <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
+</div>
+</article>
+<script type="text/javascript" src="js/main.js"></script>
 
-
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
-
-    </body>
+</div>
+</body>
 </html>
