--- a/spanish-b1.html
+++ b/spanish-b1.html
@@ -155,11 +155,14 @@
 
       </div>
 
-</div></p>
+      <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
+      <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
+</div>
+</article>
+<script type="text/javascript" src="js/main.js"></script>
 
-    </body>
+</div>
+</body>
 </html>
