--- a/spanish-b2.html
+++ b/spanish-b2.html
@@ -83,11 +83,14 @@
                    You are able to engage in a conversation with native speakers with a certain level of fluency and spontaneity, with few errors that also do not make it too difficult to understand what the speaker is saying. You can express opinions and points of view, as well as provide advantages and disadvantages on a certain topic.
       </p>
       </div>
-<p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
+      <iframe id="google_osd_static_frame_5398656737265" name="google_osd_static_frame" style="display: none; width: 0px; height: 0px;"></iframe>
 
+      <p class="MsoNormalart-art-art-"><span style="font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
-        </article>
-        <script type="text/javascript" src="js/main.js"></script>
+</div>
+</article>
+<script type="text/javascript" src="js/main.js"></script>
 
-    </body>
+</div>
+</body>
 </html>
