--- a/es/spanish-a1.html
+++ b/es/spanish-a1.html
@@ -80,10 +80,9 @@ Se trata del nivel más básico de dominio de una lengua. En este nivel se esper
           El vocabulario es básico, y se limita a sustantivos concretos y cercanos al día día (animales domésticos, partes de la casa, comida, partes del cuerpo)
           </p>
           <h2>Mini Tests </h2>
-<div class="responsive">
           <button onclick="toggleContent2()">Mini Test 1</button>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Cargando…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeN3EaIOW0kJt5KzGwd6dxB0BM9VfEZUxiD_pFEhDIYOVt6nA/viewform?embedded=true" style="border:0px;width:100%;height:600px" webkitallowfullscreen="true" mozallowfullscreen="true">Ładuję…</iframe>
           </div>
 
           <button onclick="toggleContent7()">Mini Test 2</button>
