--- a/prueba-drop/index.html
+++ b/prueba-drop/index.html
@@ -13,7 +13,10 @@
 <header>
     <a href="#" class="logo">LOGO</a>
 
-    <nav class"navbar">
+    <input type="checkbox" id="menu-bar">
+    <label for="menu-bar">Menu</label>
+
+    <nav>
       <ul>
         <li><a href="#">home</a></li>
         <li><a href="#">about</a></li>
