--- a/index.html
+++ b/index.html
@@ -83,9 +83,14 @@
 <div class="wrapper">
   <div class="img-info">
 
-  <p>hola asdfñl ak sdjf alñs dkfjal ñskdjfl añksdjf añls d d kjfañlsdkj fañlsdk jfañls dkj f ñlaksdjf lñaksdjfl ñk adsjflñ kas djfla ñskd jf añlksdjfñal ksdjf kals dkf j ads
+    <h2>About the site</h2>
+                         <p>
+    Welcome to Rodrigo Arenas Catalán's course site.
+    This site was created to make it easier for students to approach the courses I teach. Each course has levels with exercises and tests that will be assigned as homework by the teacher throughout the class. Apart from these, each course has a book with audios that will be sent to each student before the beginning of the lessons. It also has a blog where you can access articles, notices and relevant information about the courses. To enroll in a course, simply go to "Enroll" and choose the course that suits you best.
+    Health,
+    Rodrigo Arenas Catalan.
     </p>
-</div>
+  </div>
 </div>
 </body>
 </html>
