--- a/es/index.html
+++ b/es/index.html
@@ -90,11 +90,12 @@ Este sitio fue creado para facilitar a los estudiantes el acercamiento a los cur
 salud,
 Rodrigo Arenas Catalán.
 </p>
+<img class="img-me" src="images/fachada.jpg" alt="fachada">
+
 
       </article>
 <script src="js/main.js"></script>
 
-                <img class="img-me" src="images/fachada.jpg" alt="ogród">
               </div>
         </body>
   </html>
