--- a/pl/index.html
+++ b/pl/index.html
@@ -95,7 +95,7 @@ Rodrigo Arenas Catalán.
       </article>
 <script src="js/main.js"></script>
 
-                <img class="img-me" src="images/fachada.jpg" alt="ogród">
+                <img class="img-me" src="images/fachada.jpg" alt="fachada">
               </div>
         </body>
   </html>
