--- a/es/index.html
+++ b/es/index.html
@@ -86,11 +86,11 @@
                     <h2>Acerca del sitio</h2>
                     <p>
 Bienvenido al sitio de cursos de Rodrigo Arenas Catalán.
-Este sitio fue creado para facilitar a los estudiantes el acercamiento a los cursos que imparto. Cada curso tiene niveles con ejercicios y pruebas que serán puestos como tarea por el profesor a lo largo de la clase. Aparte de estos, cada curso tiene un libro con audios que se enviará a cada alumno antes del comienzo de las lecciones. También cuenta con un blog donde se puede acceder a artículos, avisos e información relevante sobre los cursos. Para inscribirte en un curso, simplemente ve a "Inscríbete" y elige el curso que más te convenga.
-salud,
+Este sitio fue creado para facilitar a los estudiantes el acercamiento a los cursos que imparto. Cada curso tiene niveles con ejercicios y pruebas que serán puestos como tarea por el profesor a lo largo de la clase. Aparte de estos, cada curso tiene un libro con audios que se enviará a cada alumno antes del comienzo de las lecciones. También cuenta con un blog donde se puede acceder a artículos, avisos e información relevante sobre los cursos. Para inscribirte en un curso, simplemente ve a "Inscripción" y elige el curso que más te convenga.
+<br>Saludos,<br>
 Rodrigo Arenas Catalán.
 </p>
-<img class="img-me" src="images/fachada.jpg" alt="fachada">
+<img class="img-me" src="images/fachada.jpg" style="width: 100%; height: auto;" alt="fachada">
 
 
       </article>
