--- a/pl/index.html
+++ b/pl/index.html
@@ -87,15 +87,15 @@
                     <h2>O stronie</h2>
                     <p>
                       Witamy na stronie kursów Rodrigo Arenas Catalán.
-Ta strona została stworzona, aby ułatwić studentom podejście do kursów, które prowadzę. Każdy kurs ma poziomy z ćwiczeniami i testami, które nauczyciel zadaje jako pracę domową na zajęciach. Oprócz tego każdy kurs ma książkę z nagraniami, które zostaną przesłane każdemu uczniowi przed rozpoczęciem lekcji. Posiada również blog, na którym można uzyskać dostęp do artykułów, ogłoszeń i istotnych informacji o kursach. Aby zapisać się na kurs, po prostu przejdź do zakładki „Zapisz się” i wybierz kurs, który najbardziej Ci odpowiada.
-Dzięki,
+Ta strona została stworzona, aby ułatwić studentom podejście do kursów, które prowadzę. Każdy kurs ma poziomy z ćwiczeniami i testami, które nauczyciel zadaje jako pracę domową na zajęciach. Oprócz tego każdy kurs ma książkę z nagraniami, które zostaną przesłane każdemu uczniowi przed rozpoczęciem lekcji. Posiada również blog, na którym można uzyskać dostęp do artykułów, ogłoszeń i istotnych informacji o kursach. Aby zapisać się na kurs, po prostu przejdź do zakładki „Zapisy” i wybierz kurs, który najbardziej Ci odpowiada.
+<br>Pozdrawiam,<br>
 Rodrigo Arenas Catalán.
 </p>
 
       </article>
 <script src="js/main.js"></script>
 
-                <img class="img-me" src="images/fachada.jpg" alt="fachada">
+                <img class="img-me" src="images/fachada.jpg" style="width: 100%; height: auto;" alt="fachada">
               </div>
         </body>
   </html>
