--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
                          <p>
     Welcome to Rodrigo Arenas Catalán's course site.
     This site was created to make it easier for students to approach the courses I teach. Each course has levels with exercises and tests that will be assigned as homework by the teacher throughout the class. Apart from these, each course has a book with audios that will be sent to each student before the beginning of the lessons. It also has a blog where you can access articles, notices and relevant information about the courses. To enroll in a course, simply go to "Sign-up" and choose the course that suits you best.
-    Health,
-    Rodrigo Arenas Catalan.
+    <br>Greetings,<br>
+    Rodrigo Arenas Catalán.
     </p>
-    <img class="img-me" src="images/fachada.jpg" alt="fachada">
-
+    <div class="responsive">
+    <img class="img-me" src="images/fachada.jpg" style="width: 100%; height: auto;" alt="fachada">
+    </div>
   </div>
 </div>
 </body>
