--- a/spanish-b2.html
+++ b/spanish-b2.html
@@ -22,8 +22,8 @@
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
                     <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/index.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/index.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="es/spanish-b2.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="pl/spanish-b2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -82,7 +82,7 @@
 
 <div class="wrapper">
   <article class="img-info">
-          <h2>Level B2</h2>
+          <h2>Spanish B2</h2>
       <p>
         This is the medium-high level that is spoken of when someone wants to refer to their level of language proficiency.
 
