--- a/spanish-c1.html
+++ b/spanish-c1.html
@@ -22,8 +22,8 @@
     <div class="translate">
                     <!-- GTranslate: https://gtranslate.io/ -->
                     <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                    <a href="es/index.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                    <a href="pl/index.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
+                    <a href="es/spanish-c1.html" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
+                    <a href="pl/spanish-c1.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
       </div>
       <!-- end of GTranslate-->
@@ -83,15 +83,16 @@
 <div class="wrapper">
   <article class="img-info">
 
-          <h2>Nivel C1</h2>
-      <p>Es lo que se conoce como «nivel alto» en el dominio de una lengua.
+          <h2>Spanish C1</h2>
+      <p>
+        It is what is known as a "high level" in mastering a language.
 
-          En este nivel ya no solo se es capaz de comprender textos complejos sino que se pueden inferir y hacer deducciones sobre lo que el texto da a entender (si un texto critica, aconseja, pone en duda, resalta un tema en concreto). Puede producir textos bien estructurados y detallados con una amplia variedad de vocabulario y cohesión lingüística.
+                   At this level, not only is one able to understand complex texts, but one can also infer and make deductions about what the text implies (if a text criticizes, advises, questions, or highlights a specific topic). You can produce well-structured and detailed texts with a wide range of vocabulary and linguistic cohesion.
 
-          El hablante es capaz de utilizar un lenguaje efectivo en un gran número de contextos sociales, profesionales y académicos con naturalidad.
+                   The speaker is able to use effective language in a large number of social, professional and academic contexts with ease.
 
-          Puede expresarse con fluidez y con expresiones y giros lingüísticos y comete pocos errores. Su pronunciación no dificulta para nada la comprensión del mensaje por el oyente.
-      </p>
+                   You can express yourself fluently with expressions and turns of phrase and make few errors. Its pronunciation does not make it difficult at all for the listener to understand the message.
+                       </p>
           <div id="content2" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
           </div>
@@ -102,7 +103,6 @@
 
       </article>
 <script src="js/main.js"></script>
-            <script src="js/main.js"></script>
 
       </div>
         </body>
