--- a/es/a2-basic2.html
+++ b/es/a2-basic2.html
@@ -87,9 +87,9 @@
                   <p><h1>Inscribirse en un curso</h1></p>
                   <div class="course-selection" style="display: inline;">
                   <select id="input" onchange="courseLevel()">
+                            <option>Inglés</option>
                             <option>Español</option>
                             <option>Japonés</option>
-                            <option>Inglés</option>
                             <option>Piano</option>
                             <option>seleccionar curso</option>
                           </select>
@@ -108,7 +108,7 @@
                           <option>seleccionar modalidad</option>
                       </select>
                         </div>
-                    <p><h1>Español A2(básico) Online</h1></p>
+                    <p><h1>Inglés A2(básico) Estacionario</h1></p>
                     <p>En este nivel se desarrollan un poco más las estructuras gramaticales y las habilidades comunicativas del nivel anterior. Se espera que el hablante sea capaz de describir en presente y en pasado aspectos sencillos de su entorno inmediato (familia, compras, trabajo, direcciones) así como comunicar de forma sencilla intercambios de información básicos, sencillos y directos.
                       El curso se divide en tres módulos, cada uno de los cuales consta de varias unidades que cubren los contenidos de A1 y le permiten, al final del curso, poder expresar ideas básicas y comenzar su viaje en el idioma.
                       <button onclick="toggleContent63()" style="background-color:blue;color:white;">Leer más</button>
