--- a/a2-basico2.html
+++ b/a2-basico2.html
@@ -85,28 +85,28 @@
             <p><h1>Sign-up for a course</h1></p>
             <div "course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
-                      <option>Spanish</option>
-                      <option>Japanese</option>
-                      <option>English</option>
-                      <option>Piano</option>
-                      <option>select course</option>
-                    </select>
-            		   <select id="output" onchange="levelModality()">
-                     <option>A2(básico)</option>
-                     <option>A1(iniciación)</option>
-                     <option>B1(intermedio)</option>
-                     <option>B2(intermedio alto)</option>
-                     <option>C1(avanzado)</option>
-                     <option>C2(muy avanzado)</option>
-                     <option>select level</option>
-            		</select>
-            			<select id="output2" onchange="courseRedirect()">
-                    <option>Stationary</option>
-                    <option>Online</option>
-                    <option>select modality</option>
+              <option>Spanish</option>
+              <option>Japanese</option>
+              <option>English</option>
+              <option>Piano</option>
+              <option>select course</option>
+            </select>
+           <select id="output" onchange="levelModality()">
+             <option>A2(básico)</option>
+             <option>B1(intermedio)</option>
+             <option>B2(intermedio alto)</option>
+             <option>C1(avanzado)</option>
+             <option>C2(muy avanzado)</option>
+             <option>A1(iniciación)</option>
+             <option>select level</option>
+        </select>
+          <select id="output2" onchange="courseRedirect()">
+            <option>Online</option>
+            <option>Stationary</option>
+            <option>select modality</option>
                 </select>
                   </div>
-              <p><h1>Español A2(básico) Stationary</h1></p>
+              <p><h1>Spanish A2(basic) Stationary</h1></p>
               <p>At this level, the grammatical structures and communication skills of the previous level are developed a little more. The speaker is expected to be able to describe in the present and in the past simple aspects of his immediate environment (family, shopping, work, directions) as well as to communicate in a simple way basic, simple and direct exchanges of information.
                 The course is divided in three modules each consisting of various units covering the A1 contents and allowing you by the end of the course, to be able to express basic ideas and start your journey in the language.
                 <button onclick="toggleContent66()" style="background-color:blue;color:white;">Read More</button>
