--- a/es/b2-intermedioalto2.html
+++ b/es/b2-intermedioalto2.html
@@ -107,7 +107,7 @@
                     <option>seleccionar modalidad</option>
                 </select>
                   </div>
-              <p><h1>Español B2(intermedio alto) Online</h1></p>
+              <p><h1>Español B2(intermedio alto) Estacionario</h1></p>
               <p>After a B2 level you master the last grammar contents and enrich extremely your vocabulary. You also start understanding figurative speech and learn many Español expressions. You can understand the main ideas of complex text on both concrete and abstract topics, including technical discussions in their field of specialization. You can also interact with a degree of fluency and spontaneity that makes regular interaction with native speakers quite possible without strain for either party. You can produce clear, detailed text on a wide range of subjects and explain a viewpoint on a topical issue giving the advantages and disadvantages of various options.
                 <button onclick="toggleContent74()" style="background-color:blue;color:white;">Leer más</button>
                 <div id="content74" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
