--- a/es/b1-intermediate.html
+++ b/es/b1-intermediate.html
@@ -93,12 +93,12 @@
                       <option>seleccionar curso</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>B1(intermedio)</option>
-                     <option>B2(intermedio alto)</option>
-                     <option>C1(advanced2)</option>
-                     <option>C2(muy avanzado)</option>
-                     <option>A1(introductorio)</option>
-                     <option>A2(básico)</option>
+                     <option>B1(intermediate)</option>
+                     <option>B2(upper-intermediate)</option>
+                     <option>C1(advanced)</option>
+                     <option>C2(very advanced)</option>
+                     <option>A1(introductory)</option>
+                     <option>A2(basic)</option>
                      <option>seleccionar nivel</option>
             		</select>
             			<select id="output2" onchange="courseRedirect()">
