--- a/es/a2-basic2.html
+++ b/es/a2-basic2.html
@@ -94,12 +94,12 @@
                             <option>seleccionar curso</option>
                           </select>
                   		   <select id="output" onchange="levelModality()">
-                           <option>A2(básico)</option>
-                           <option>B1(intermedio)</option>
-                           <option>B2(intermedio alto)</option>
-                           <option>C1(avanzado)</option>
-                           <option>C2(muy avanzado)</option>
-                           <option>A1(iniciación)</option>
+                           <option>A2(basic)</option>
+                           <option>A1(introductory)</option>
+                           <option>B1(intermediate)</option>
+                           <option>B2(upper-intermediate)</option>
+                           <option>C1(advanced)</option>
+                           <option>C2(very advanced)</option>
                            <option>seleccionar nivel</option>
                   		</select>
                   			<select id="output2" onchange="courseRedirect()">
