--- a/es/c1-advanced.html
+++ b/es/c1-advanced.html
@@ -93,17 +93,17 @@
                       <option>seleccionar curso</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>C1(avanzado)</option>
-                     <option>C2(muy avanzado)</option>
-                     <option>A1(introductorio)</option>
-                     <option>A2(básico)</option>
-                     <option>B1(intermedio)</option>
-                     <option>B2(intermedio alto)</option>
+                     <option>C1(advanced)</option>
+                     <option>C2(very advanced)</option>
+                     <option>A1(introductory)</option>
+                     <option>A2(basic)</option>
+                     <option>B1(intermediate)</option>
+                     <option>B2(upper-intermediate)</option>
                      <option>seleccionar nivel</option>
                </select>
                  <select id="output2" onchange="courseRedirect()">
-                   <option>Estacionario</option>
                    <option>Online</option>
+                   <option>Estacionario</option>
                    <option>seleccionar modalidad</option>
                </select>
                  </div>
