--- a/pl/c1-advanced.html
+++ b/pl/c1-advanced.html
@@ -94,13 +94,13 @@
                       <option>wybierz kurs</option>
                     </select>
             		   <select id="output" onchange="levelModality()">
-                     <option>C1(zaawansowany-ang)</option>
-                     <option>C2(bardzo zaawansowany-ang)</option>
-                     <option>A1(wprowadzający-ang)</option>
-                     <option>A2(podstawowy-ang)</option>
-                     <option>B1(średniozaawansowany-ang)</option>
-                     <option>B2(prawie-zaawansowany-ang)</option>
-                     <option>wybierz poziom</option>
+                     <option>C1(advanced)</option>
+                     <option>C2(very advanced)</option>
+                     <option>A1(introductory)</option>
+                     <option>A2(basic)</option>
+                     <option>B1(intermediate)</option>
+                     <option>B2(upper-intermediate)</option>
+                   <option>wybierz poziom</option>
                </select>
                  <select id="output2" onchange="courseRedirect()">
                    <option>Stacjonarny</option>
