--- a/pl/a2-basic2.html
+++ b/pl/a2-basic2.html
@@ -108,7 +108,7 @@
                           <option>wybierz tryb</option>
                       </select>
                         </div>
-                    <p><h1>Angielski A2(podstawowy-ang) Stacjonarny</h1></p>
+                    <p><h1>Angielski A2(podstawowy) Stacjonarny</h1></p>
       Na tym poziomie struktury gramatyczne i umiejętności komunikacyjne z poprzedniego poziomu są nieco bardziej rozwinięte. Od mówcy oczekuje się umiejętności opisywania w teraźniejszości i przeszłości prostych aspektów swojego najbliższego otoczenia (rodzina, zakupy, praca, kierunki) oraz komunikowania w prosty sposób podstawowych, prostych i bezpośrednich wymian informacji.
                  Kurs jest podzielony na trzy moduły, z których każdy składa się z różnych jednostek obejmujących zawartość A1 i pozwalających pod koniec kursu wyrazić podstawowe pojęcia i rozpocząć swoją przygodę z językiem.
                       <button onclick="toggleContent63()" style="background-color:blue;color:white;">Czytaj więcej</button>
