--- a/pl/b1-intermediate2.html
+++ b/pl/b1-intermediate2.html
@@ -108,7 +108,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h1>Angielski B1(średniozaawansowany-ang) Stacjonarny</h1></p>
+              <p><h1>Angielski B1(średniozaawansowany) Stacjonarny</h1></p>
               </div>
   </article>
 <script src="js/main.js"></script>
