--- a/pl/b2-upperintermediate.html
+++ b/pl/b2-upperintermediate.html
@@ -108,7 +108,7 @@
                    <option>wybierz tryb</option>
                </select>
                  </div>
-             <p><h1>Angielski B2(prawie-zaawansowany-ang) Online</h1></p>
+             <p><h1>Angielski B2(prawie-zaawansowany) Online</h1></p>
               </div>
   </article>
 <script src="js/main.js"></script>
