--- a/pl/c2-veryadvanced2.html
+++ b/pl/c2-veryadvanced2.html
@@ -108,7 +108,7 @@
                    <option>wybierz tryb</option>
                </select>
                  </div>
-             <p><h1>Angielski C2(bardzo zaawansowany-ang) Stacjonarny</h1></p>
+             <p><h1>Angielski C2(bardzo zaawansowany) Stacjonarny</h1></p>
               </div>
   </article>
 <script src="js/main.js"></script>
