--- a/es/b2-intermedioalto2.html
+++ b/es/b2-intermedioalto2.html
@@ -108,8 +108,8 @@
                 </select>
                   </div>
               <p><h2>Español B2(intermedio alto) Estacionario</h2></p>
-              <p>After a B2 level you master the last grammar contents and enrich extremely your vocabulary. You also start understanding figurative speech and learn many Español expressions. You can understand the main ideas of complex text on both concrete and abstract topics, including technical discussions in their field of specialization. You can also interact with a degree of fluency and spontaneity that makes regular interaction with native speakers quite possible without strain for either party. You can produce clear, detailed text on a wide range of subjects and explain a viewpoint on a topical issue giving the advantages and disadvantages of various options.
-                <button onclick="toggleContent74()" style="background-color:blue;color:white;">Leer más</button>
+              <p>
+Después de un nivel B2, dominas los últimos contenidos gramaticales y enriqueces enormemente tu vocabulario. También comienzas a comprender el habla figurativa y aprendes muchas expresiones en español. Puede comprender las ideas principales de un texto complejo sobre temas tanto concretos como abstractos, incluidas las discusiones técnicas en su campo de especialización. También puede interactuar con un grado de fluidez y espontaneidad que hace posible la interacción regular con hablantes nativos sin tensión para ninguna de las partes. Puede producir un texto claro y detallado sobre una amplia gama de temas y explicar un punto de vista sobre un tema de actualidad dando las ventajas y desventajas de varias opciones.                <button onclick="toggleContent74()" style="background-color:blue;color:white;">Leer más</button>
                 <div id="content74" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
 
                   <p>
