--- a/es/c2-muyavanzado2.html
+++ b/es/c2-muyavanzado2.html
@@ -107,7 +107,7 @@
                     <option>seleccionar modalidad</option>
                 </select>
                   </div>
-              <p><h2>Español C2(muy avanzado) Online</h2></p>
+              <p><h2>Español C2(muy avanzado) Estacionario</h2></p>
               <p>At C2 level you can use the language almost as a native speaker. You can express yourself spontaneously, very fluently and precisely, differentiating finer shades of meaning even in the most complex situations.
                 <button onclick="toggleContent82()" style="background-color:blue;color:white;">Leer más</button>
                 <div id="content82" style="display:none;font-family: Arial, sans-serif; font-size: 16px; line-height: 18px;">
