--- a/es/b1-intermedio2.html
+++ b/es/b1-intermedio2.html
@@ -26,53 +26,88 @@
                   <a href="../pl/b1-intermedio2.html" onclick="doGTranslate('es|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
 
 
-  </div>
+      </div>
+      <!-- end of GTranslate-->
 
-                <h2 class="headline" data-left="2.05%">
-                <a href="index.html">Rodare</a>
-                </h2>
-                <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
-                <ul class="elmenu">
-                    <li class="elmenu"><a href="index.html">Inicio</a></li>
-                    <li class="elmenu"><a href="https://rodare2.blogspot.com/">Blog</a></li>
-                    <li class="dropdown elmenu">
-                      <a href="courses.html" class="dropbtn elmenu">Cursos</a>
-                      <div class="dropdown-content elmenu">
-                        <a href="spanish.html" class="elmenu">Español</a>
-                        <a href="japanese.html" class="elmenu">Japonés</a>
-                        <a href="english.html" class="elmenu">Inglés</a>
-                        <a href="piano.html" class="elmenu">Piano</a>
-                      </div>
-                    </li>
-                    <li class="elmenu"><a href="calendar.html">Calendario</a></li>
-                    <li class="elmenu"><a href="signup.html">Inscripción</a></li>
-                </ul>
-          <article class="img-info">
-          <div id="main-content">
-            <p><h1>Inscribirse en un curso</h1></p>
-            <div class="course-selection" style="display: inline;">
-            <select id="input" onchange="courseLevel()">
-                      <option>Español</option>
-                      <option>Japonés</option>
-                      <option>Inglés</option>
-                      <option>Piano</option>
-                      <option>seleccionar curso</option>
-                    </select>
-            		   <select id="output" onchange="levelModality()">
-                     <option>B1(intermedio)</option>
-                     <option>B2(intermedio alto)</option>
-                     <option>C1(avanzado)</option>
-                     <option>C2(muy avanzado)</option>
-                     <option>A1(iniciación)</option>
-                     <option>A2(básico)</option>
-                   <option>seleccionar nivel</option>
-            		</select>
-            			<select id="output2" onchange="courseRedirect()">
-                    <option>Estacionario</option>
-                    <option>Online</option>
-                    <option>seleccionar modalidad</option>
-                </select>
-                  </div>
+
+    <nav class="dropdown">
+                    <ul>
+                      <li><a href="index.html">inicio</a></li>
+                      <li><a href="https://rodare1.blogspot.com/">blog</a></li>
+                      <li><a href="#">cursos +</a>
+                        <ul>
+                          <li><a href="#">español</a>
+                            <ul>
+                              <li><a href="spanish-a1.html">A1</a></li>
+                              <li><a href="spanish-a2.html">A2</a></li>
+                              <li><a href="spanish-b1.html">B1</a></li>
+                              <li><a href="spanish-b2.html">B2</a></li>
+                              <li><a href="spanish-c1.html">C1</a></li>
+                              <li><a href="spanish-c2.html">C2</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="#">japonés</a>
+                            <ul>
+                              <li><a href="japanese-a1.html">A1</a></li>
+                              <li><a href="japanese-a2.html">A2</a></li>
+                              <li><a href="japanese-b1.html">B1</a></li>
+                              <li><a href="japanese-b2.html">B2</a></li>
+                              <li><a href="japanese-c1.html">C1</a></li>
+                              <li><a href="japanese-c2.html">C2</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="#">inglés</a>
+                            <ul>
+                              <li><a href="english-a1.html">A1</a></li>
+                              <li><a href="english-a2.html">A2</a></li>
+                              <li><a href="english-b1.html">B1</a></li>
+                              <li><a href="english-b2.html">B2</a></li>
+                              <li><a href="english-c1.html">C1</a></li>
+                              <li><a href="english-c2.html">C2</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="#">piano</a>
+                            <ul>
+                              <li><a href="pianoBeg.html">principiante</a></li>
+                              <li><a href="pianoBas.html">básico</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li><a href="calendar.html">calendario</a></li>
+                      <li><a href="signup.html">inscripción</a></li>
+                    </ul>
+
+                  </nav>
+</header>
+
+<div class="wrapper">
+  <article class="img-info">
+    <p><h1>Inscribirse en un curso</h1></p>
+    <div class="course-selection" style="display: inline;">
+    <select id="input" onchange="courseLevel()">
+              <option>Español</option>
+              <option>Japonés</option>
+              <option>Inglés</option>
+              <option>Piano</option>
+              <option>seleccionar curso</option>
+            </select>
+           <select id="output" onchange="levelModality()">
+             <option>B1(intermedio)</option>
+             <option>B2(intermedio alto)</option>
+             <option>C1(avanzado)</option>
+             <option>C2(muy avanzado)</option>
+             <option>A1(iniciación)</option>
+             <option>A2(básico)</option>
+           <option>seleccionar nivel</option>
+        </select>
+          <select id="output2" onchange="courseRedirect()">
+            <option>Estacionario</option>
+            <option>Online</option>
+            <option>seleccionar modalidad</option>
+        </select>
+          </div>
+
               <p><h2>Español B1(intermedio) Estacionario</h2></p>
               <p>We are getting closer to the typical "medium level" that is boasted in many curricula without being accredited by any institution. At this level the speaker must be able to engage in conversation with native speakers in everyday life situations (work, school, a restaurant). Abstract vocabulary begins to be mastered and the speaker can describe his experiences or events that have happened to him in the past. He can talk about dreams, ambitions, and hopes for the future. He is able to express his opinion on blueprints and give explanations for his actions.
                 <button onclick="toggleContent70()" style="background-color:blue;color:white;">Leer más</button>
@@ -117,7 +152,7 @@
         </div>
 </div>
               </div>
-              </div>
+
   </article>
 <script src="js/main.js"></script>
 
