--- a/pl/a1-introductory2.html
+++ b/pl/a1-introductory2.html
@@ -108,7 +108,7 @@
                     <option>wybierz tryb</option>
                 </select>
                   </div>
-              <p><h2>Angielski A1(wprowadzający-ang) Stacjonarny</h2></p>
+              <p><h2>Angielski A1(wprowadzający) Stacjonarny</h2></p>
               </div>
   </article>
 <script src="js/main.js"></script>
