--- a/pl/b1-intermedio2.html
+++ b/pl/b1-intermedio2.html
@@ -29,47 +29,67 @@
 
   </div>
 
-                <h2 class="headline" data-left="2.05%">
-                <a href="index.html">Rodare</a>
-                </h2>
-                  <div class="translate">
-                  <a href="#" onclick="doGTranslate('en|en');return false;" title="English" class="gflag nturl" style="background-position:-0px -0px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="English" /></a>
-                  <a href="es" onclick="doGTranslate('en|es');return false;" title="Spanish" class="gflag nturl" style="background-position:-600px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Spanish" /></a>
-                  <a href="#" onclick="doGTranslate('en|pl');return false;" title="Polish" class="gflag nturl" style="background-position:-200px -200px;"><img src="//gtranslate.net/flags/blank.png" height="16" width="16" alt="Polish" /></a>
-                    <style type="text/css">
-
-  a.gflag {vertical-align:middle;font-size:16px;padding:1px 0;background-repeat:no-repeat;background-image:url(//gtranslate.net/flags/16.png);}
-  a.gflag img {border:0;}
-  a.gflag:hover {background-image:url(//gtranslate.net/flags/16a.png);}
-  #goog-gt-tt {display:none !important;}
-  .goog-te-banner-frame {display:none !important;}
-  .goog-te-menu-value:hover {text-decoration:none !important;}
-  body {top:0 !important;}
-  #google_translate_element2 {display:none!important;}
-
-  </style>
+                    
 
 
 
-</div>
-                <img class="img-banner2" src="images/banner4.jpg" alt="ogród">
-                <ul class="elmenu">
-                    <li class="elmenu"><a href="index.html">Dom</a></li>
-                    <li class="elmenu"><a href="https://rodare3.blogspot.com/">Blog</a></li>
-                    <li class="dropdown elmenu">
-                      <a href="courses.html" class="dropbtn elmenu">Przedmioty</a>
-                      <div class="dropdown-content elmenu">
-                        <a href="spanish.html" class="elmenu">Hiszpański</a>
-                        <a href="japanese.html" class="elmenu">Japoński</a>
-                        <a href="english.html" class="elmenu">Angielski</a>
-                        <a href="piano.html" class="elmenu">Pianino</a>
-                      </div>
-                    </li>
-                    <li class="elmenu"><a href="calendar.html">Kalendarz</a></li>
-                    <li class="elmenu"><a href="signup.html">Zapisy</a></li>
-                </ul>
-          <article class="img-info">
-          <div id="main-content">
+      </div>
+      <!-- end of GTranslate-->
+
+
+    <nav class="dropdown">
+                    <ul>
+                      <li><a href="index.html">dom</a></li>
+                      <li><a href="https://rodare1.blogspot.com/">blog</a></li>
+                      <li><a href="#">przedmioty +</a>
+                        <ul>
+                          <li><a href="#">hiszpański</a>
+                            <ul>
+                              <li><a href="spanish-a1.html">A1</a></li>
+                              <li><a href="spanish-a2.html">A2</a></li>
+                              <li><a href="spanish-b1.html">B1</a></li>
+                              <li><a href="spanish-b2.html">B2</a></li>
+                              <li><a href="spanish-c1.html">C1</a></li>
+                              <li><a href="spanish-c2.html">C2</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="#">japoński</a>
+                            <ul>
+                              <li><a href="japanese-a1.html">A1</a></li>
+                              <li><a href="japanese-a2.html">A2</a></li>
+                              <li><a href="japanese-b1.html">B1</a></li>
+                              <li><a href="japanese-b2.html">B2</a></li>
+                              <li><a href="japanese-c1.html">C1</a></li>
+                              <li><a href="japanese-c2.html">C2</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="#">angielski</a>
+                            <ul>
+                              <li><a href="english-a1.html">A1</a></li>
+                              <li><a href="english-a2.html">A2</a></li>
+                              <li><a href="english-b1.html">B1</a></li>
+                              <li><a href="english-b2.html">B2</a></li>
+                              <li><a href="english-c1.html">C1</a></li>
+                              <li><a href="english-c2.html">C2</a></li>
+                            </ul>
+                          </li>
+                          <li><a href="#">pianino</a>
+                            <ul>
+                              <li><a href="pianoBeg.html">początkujący</a></li>
+                              <li><a href="pianoBas.html">podstawowy</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li><a href="calendar.html">kalendarz</a></li>
+                      <li><a href="signup.html">zapisy</a></li>
+                    </ul>
+
+                  </nav>
+</header>
+
+<div class="wrapper">
+  <article class="img-info">
             <p><h1>Zapisz się na kurs</h1></p>
             <div class="course-selection" style="display: inline;">
             <select id="input" onchange="courseLevel()">
