--- a/es/b1-intermedio2.html
+++ b/es/b1-intermedio2.html
@@ -139,7 +139,7 @@
             <tr>
               <td>Tres opciones 👆 (Selecciona en el formulario que se desplegará luego de hacer clic en "RESERVA"👉)</td>
               <td>02.02.2022 - 14.04.2023</td>
-              <td><ul id="price"><li>4800zł (2 a 4 personas), or</li><li>3600zł (5 a 8 personas)</li> <li>120zł (1:1)</li></ul></td>
+              <td><ul id="price"><li>4800zł (2 a 4 personas), or</li><li>3600zł (5 a 8 personas)</li> <li>120zł/hr (1:1)</li></ul></td>
                 <td><button id="order" onclick="toggleContent69()">RESERVA</button></td>
             </tr>
         </table>
