--- a/a2-n52.html
+++ b/a2-n52.html
@@ -140,7 +140,7 @@ Listening: One is able to listen and comprehend conversations about topics regul
                   <tr>
                     <td>Three options 👆 (Select on the form that will be displayed after clicking "ORDER"👉)</td>
                     <td>02.02.2022 - 02.04.2023</td>
-                    <td><ul id="price"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł (1:1)</li></ul></td>
+                    <td><ul id="price"><li>4800zł (2 to 4 people), or</li><li>3600zł (5 to 8 people)</li> <li>120zł/hr (1:1)</li></ul></td>
                       <td><button id="order" onclick="toggleContent91()">ORDER</button></td>
                   </tr>
               </table>
