--- a/pl/a2-basico.html
+++ b/pl/a2-basico.html
@@ -140,7 +140,7 @@
                   <tr>
                     <td>Trzy opcje 👆 (Wybierz na formularzu, który wyświetli się po kliknięciu „ZAMÓW”👉)</td>
                     <td>02.02.2022 - 02.04.2023</td>
-                    <td><ul id="price"><li>4800zł (2 do 4 osób), lub</li><li>3600zł (5 do 8 osób)</li> <li>120zł (1:1)</li></ul></td>
+                    <td><ul id="price"><li>4800zł (2 do 4 osób), lub</li><li>3600zł (5 do 8 osób)</li> <li>120zł/hr (1:1)</li></ul></td>
                       <td><button id="order" onclick="toggleContent63()">ZAMÓW</button></td>
                   </tr>
               </table>
